--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "backend stuff for mern testing",
+  "engines": {
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
+  },
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"nodemon ./index.js --exec babel-node -e js\" \"cd ../frontend && npm start\"",
