--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
+    "@azure/msal-browser": "^2.24.0",
+    "@azure/msal-react": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
