--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.20.0",
+    "eslint": "^8.15.0",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "mongoose": "^6.3.1",
