--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -33,6 +33,9 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-unused-vars": "off",
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": 1
     }
 }
