--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -25,6 +25,17 @@
             "error",
             "always"
         ],
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "eol-last": [
+            "error",
+            "always"
+        ],
+        "no-multiple-empty-lines": [
+            "error",
+            {
+                "max": 2,
+                "maxEOF": 0
+            }
+        ]
     }
 }
