--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/backend/node_modules
+/frontend/node_modules
 /.pnp
 .pnp.js
 
@@ -21,3 +22,13 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/.idea
+
+# learning files
+/backend/controllers/playerControllers.js
+/backend/models/playerModel.js
+/backend/routes/soccerRoutes.js
+/frontend/src/Components/App.css
+/frontend/src/Components/App.js
+/frontend/src/Components/Player
