--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "buffer": "^6.0.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
@@ -50,7 +51,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
     "eslint-plugin-react": "^7.29.4"
   }
 }
