--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "npm": "^8.8.0"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "minimist": "^1.2.6",
