--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^18.1.0",
