--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"nodemon ./index.js --exec babel-node -e js\" \"cd ../frontend && npm start\"",
-    "server": "nodemon ./index.js --exec babel-node -e js"
+    "server": "nodemon index.js"
   },
   "author": "TicketSys+ Team",
   "contributors": ["Pavel Krokhalev", "Nathan Arrowsmith", "Adam Percival", "Conor O'Brien"],
