--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@azure/msal-browser": "^2.24.0",
     "@azure/msal-react": "^1.4.0",
+    "@codemirror/lang-json": "^0.20.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@uiw/react-codemirror": "^4.7.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
