--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiw/react-codemirror": "^4.7.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.2.0-beta1",
     "buffer": "^6.0.3",
     "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
