--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -8,6 +8,9 @@
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "plugins": [
+        "import"
+    ],
     "rules": {
         "indent": [
             "error",
@@ -35,6 +38,16 @@
             {
                 "max": 2,
                 "maxEOF": 0
+            }
+        ],
+        "object-curly-spacing": [
+            "warn",
+            "always"
+        ],
+        "import/order": [
+            "warn",
+            {
+                "newlines-between": "always"
             }
         ]
     }
