--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,12 @@
     "server": "nodemon index.js"
   },
   "author": "TicketSys+ Team",
-  "contributors": ["Pavel Krokhalev", "Nathan Arrowsmith", "Adam Percival", "Conor O'Brien"],
+  "contributors": [
+    "Pavel Krokhalev",
+    "Nathan Arrowsmith",
+    "Adam Percival",
+    "Conor O'Brien"
+  ],
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -20,6 +25,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "body-parser": "^1.20.0",
     "eslint": "^8.15.0",
+    "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
     "i": "^0.3.7",
     "mongoose": "^6.3.1",
