--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "minimist": "^1.2.6",
     "mongodb": "^4.5.0",
     "mysql": "^2.18.1"
