add linter plugin that exposes more warnings :)

--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -23,6 +23,7 @@
     },
     "plugins": [
         "react",
+        "react-hooks",
         "import"
     ],
     "rules": {
@@ -57,6 +58,8 @@
         ],
         "react/react-in-jsx-scope": "off",
         "react/prop-types": 1,
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
         "import/order": [
             "warn",
             {
