--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0-beta1",
     "buffer": "^6.0.3",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "html-react-parser": "^1.4.12",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
