--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,21 +1,16 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TicketSys+",
+  "name": "Motorq Ticket System Plus",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "black-gear-transparent-300x298.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "motorqLogo.svg",
+      "type": "image/svg",
+      "sizes": "any"
     }
   ],
   "start_url": ".",
