--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 REACT_APP_BACKEND_URL=http://localhost:4001/
+REACT_APP_DEVOPS_ORGANIZATION_URL=https://dev.azure.com/KrokhalevPavel
+REACT_APP_DEVOPS_TOKEN=fdz6itxbgzuqb2yumqyjvpqcplqrn3fxj7u36obf6aycmnrpzaia
