--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_BACKEND_URL=http://localhost:4001/
 REACT_APP_DEVOPS_ORGANIZATION_URL=https://dev.azure.com/KrokhalevPavel
+REACT_APP_CLIENT_ID=42ced15c-1747-47e9-80e2-ac48ce121919
+REACT_APP_REDIRECT_URI=http://localhost:3000/
